public/grad/grad-style.css
.image-background {
    background-image: conic-gradient(hsl(116, 0%, 72%),hsl(116, 0%, 72%));

    /* Full height */
    !important height: 100%;
    width: 100%;

    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

    position: static;
}

.blur-div {
    background: rgba(255, 255, 255, 0.7);
}

.blur-div-2 {
    background: rgba(255, 255, 255, 0.5);
}

html, body {
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
    overflow: auto;
    height: 100%;
    margin: -10px;
}

.uniDiv {
    height: 35%;
    max-height: 30%;
    margin-right: 10%;
    overflow: auto;
    margin-bottom: 10px
}

.uniText {
    width: 65%;
    float: right;
    max-height: 90%;
    padding-left:20px
}

.profImg {
    max-height: 79%;
    max-width: 90%;
    align-content: center;
    margin-top: 25px;
    padding-top: 10px;
    padding-bottom: 10px;
    object-fit: cover;
}

.courseName {
    text-align: left;
    margin-top: 5px;
    margin-bottom: 15px;
    max-font-size: 26pt;
    font-size: 18pt;
    min-font-size: 5pt;
}

.uniName {
    text-align: left;
    margin-top: 25px;
    margin-bottom: 0;
    max-font-size: 32pt;
    font-size: 24pt;
    min-font-size: 5pt;
    cursor: pointer;
    text-underline: #03164d;
    text-decoration: underline;
}

.otherUniLogo {
    max-height: 100%;
    max-width: 100%;
}

.singleLineBox {
    border:0.5px solid #b3b3b3;
    background: #ffffff;
    width:200px;
    height: 25px;
    border-radius:5px;
    -moz-border-radius:5px;
    -moz-box-shadow:    0.3px 0.3px 0.3px #ccc;
    -webkit-box-shadow: 0.3px 0.3px 0.3px 0.3px #ccc;
    box-shadow:         0.3px 0.3px 0.3px 0.3px #ccc;
}

.multiLineBox {
    border:0.5px solid #b3b3b3;
    background: #ffffff;
    width:400px;
    max-width: 100%;
    height: 100px;
    border-radius:5px;
    font-size: 12px;
    -moz-border-radius:5px;
    -moz-box-shadow:    0.3px 0.3px 0.3px #ccc;
    -webkit-box-shadow: 0.3px 0.3px 0.3px 0.3px #ccc;
    box-shadow:         0.3px 0.3px 0.3px 0.3px #ccc;
    resize: none;
}


.titleWithDescription {
    line-height: 0.8px;
}

.description {
    padding: 0;
    margin: 4px 0 4px 0;
    font-style: normal !important;
    font-weight: 400 !important;
}

.submitButton {
    transition-duration: 0.4s;
    background-color: rgb(255, 255, 255);
    color: black;
    padding: 10px 10px;
    margin-top: 15px;
    text-align: center;
    border-radius:10px;
    -moz-border-radius:10px;
    -moz-box-shadow:    0.3px 0.3px 0.3px #ccc;
    -webkit-box-shadow: 0.3px 0.3px 0.3px 0.3px #ccc;
    box-shadow:         0.3px 0.3px 0.3px 0.3px #ccc;
    text-decoration: none;
    display: inline-block;
    width: 90px;
    height: 40px;
    border: 3px solid #4CAF50;
    font-size: 12px;
    font-family: "Helvetica Neue", serif;
}

.submitButton:hover {
    background-color: #4CAF50; /* Green */
    color: white;
}

.submitButton:active {
    background-color: #3e8e41;
    box-shadow: 0 5px #666;
    transform: translateY(4px);
}

p, h1, h2, h3, h4, h5, h6 {
    text-size-adjust: none;
    -webkit-text-size-adjust:none;
}

.gradTitle {
    font-size: 60pt;
    margin-bottom: 15px;
}

.cellName {
    width: 100%;
    font-size: 40pt;
    margin-bottom: 0;
    margin-top: 0;
    padding-top: 0;
}

.cellImage {
    width: 99%;
    height:99%;
    object-fit: contain;
    border-radius: 10%;
}

.cellDescription {
    width: 100%;
    font-size: 24pt;
    margin-top: 0;
    padding-top: 7px;
}

.cellImageDiv {
    float: left;
    width: 15%;
    padding-left: 20px;
}

.cellInfoDiv {
    float: right;
    padding-left: 10px;
}

.cell {
    background-color: white;
    border-radius: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
    cursor: pointer;
    margin-top: 20px;
}

.back {
    padding: 16px 32px;
    display: inline-block;
    text-decoration: none;
    background-color: #f1f1f1;
    color: black;
    border-radius: 7px;
}

.next {
    padding: 16px 32px;
    display: inline-block;
    text-decoration: none;
    background-color: #03178f;
    color: white;
    border-radius: 7px;
}

.next:hover {
    background-color: #ddd;
    color: black;
}

.back:hover {
    background-color: #ddd;
    color: black;
}

